fix alignment bugs

--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -56,8 +56,7 @@ body {
   margin-bottom: 16px;
 }
 
-fieldset {
-  border: 0;
+.form__input-field {
   position: relative;
 }
 
@@ -93,7 +92,6 @@ input::-webkit-inner-spin-button {
   border: 0;
   text-align: right;
   height: rem(48px);
-  position: relative;
   &::placeholder {
     color: color(very-dark-cyan);
   }
@@ -138,7 +136,7 @@ input::-webkit-inner-spin-button {
     height: 17px;
     background-image: url("../images/icon-dollar.svg");
     position: absolute;
-    top: 16px;
+    top: 45px;
     left: 20px;
     z-index: 1;
   }
@@ -151,7 +149,7 @@ input::-webkit-inner-spin-button {
     height: 16px;
     background-image: url("../images/icon-person.svg");
     position: absolute;
-    top: 16px;
+    top: 45px;
     left: 17px;
     z-index: 1;
   }
